I heard you like Latin

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>BlueTape</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,8 +21,8 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>BlueTape</h1>
+							<p>Going the Distance</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -43,7 +43,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section with cool icons
 					<section>
 						<header>
 							<h2>Feugiat consequat tempus ultrices</h2>
@@ -60,9 +60,9 @@
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
-					</section>
+					</section>-->
 
-				<!-- Section -->
+				<!-- Section-->
 					<section>
 						<header>
 							<h2>Ultrices erat magna sed condimentum</h2>
@@ -119,7 +119,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section
 					<section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
@@ -131,7 +131,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Elements -->
 				<!--
@@ -407,7 +407,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>This section doesn't actually work yet</strong> Please email bluetape@ybell.ca to contact the BlueTape team.</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -429,12 +429,12 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">BlueTape@ybell.ca</a>
 								</li>
-								<li>
+								<!--<li>
 									<h3>Phone</h3>
 									<a href="#">(000) 000-0000</a>
-								</li>
+								</li>-->
 								<li>
 									<h3>Address</h3>
 									<span>1234 Somewhere Road, Nashville, TN 00000</span>
@@ -442,12 +442,12 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>-->
 									</ul>
 								</li>
 							</ul>
@@ -455,7 +455,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Yves Belliveau. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
