--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 	</head>
 	<body class="is-preload">
 
@@ -24,22 +25,11 @@
 							<h1>BlueTape</h1>
 							<p>Going the Distance</p>
 							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+								<li><a href="#yeah" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
 							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</section>
-
-				<!-- Section -->
-					<section id="first">
-						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
-						</header>
-						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -63,18 +53,18 @@
 					</section>-->
 
 				<!-- Section-->
-					<section>
+					<section id="yeah">
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>What it do</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>You KNOW you want it</strong> yeah you do....</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>This</h3>
+										<p>Yup...</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -89,8 +79,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>That</h3>
+										<p>Not only that...</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -104,8 +94,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>And this too!</h3>
+										<p>Pretty cool stuff, eh?</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -116,6 +106,28 @@
 									</div>
 								</section>
 
+						</div>
+					</section>
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2>SENG 499</h2>
+						</header>
+						<div class="content">
+							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						</div>
+					</section>
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2>The Team</h2>
+						</header>
+						<div class="content">
+							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -439,7 +451,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<h3>Address</h3>
 									<span>1234 Somewhere Road, Nashville, TN 00000</span>
 								</li>
-								<li>
+								<!--<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
 										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -447,9 +459,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>-->
+										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
-								</li>
+								</li>-->
 							</ul>
 						</footer>
 					</section>
