getting ready to populate

--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
 					</section>-->
 
 				<!-- Section-->
-					<section id="yeah">
+				<!--	<section id="yeah">
 						<header>
 							<h2>What it do</h2>
 						</header>
 						<div class="content">
 							<p><strong>You KNOW you want it</strong> yeah you do....</p>
 
-							<!-- Section -->
 								<section>
 									<header>
 										<h3>This</h3>
@@ -76,7 +75,6 @@
 									</div>
 								</section>
 
-							<!-- Section -->
 								<section>
 									<header>
 										<h3>That</h3>
@@ -91,7 +89,6 @@
 									</div>
 								</section>
 
-							<!-- Section -->
 								<section>
 									<header>
 										<h3>And this too!</h3>
@@ -107,12 +104,32 @@
 								</section>
 
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>SENG 499</h2>
+							<h2>Our Goal</h2>
+						</header>
+						<div class="content">
+							<p><strong>BlueTape</strong> is a bluetooth enabled smart measuring tape that pairs with a companion app which identifies the user’s correct clothing size in a desired brand to facilitate the online shopping experience.</p>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							</div>
+					</section>
+
+					<section>
+						<header>
+							<h2>The Project</h2>
+						</header>
+						<div class="content">
+							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						</div>
+					</section>
+
+					<section>
+						<header>
+							<h2>How it Works</h2>
 						</header>
 						<div class="content">
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
@@ -123,13 +140,37 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>The Team</h2>
+							<h2>About The Team</h2>
 						</header>
 						<div class="content">
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
+
+					<section>
+						<header>
+							<h2>Acknowledgements</h2>
+						</header>
+						<div class="content">
+							<p>The BlueTape design team would like to take this opportunity to say thank you to Dr. T. Ilamparithi, the course coordinator; Dr. Xiaodai Dong, the primary course instructor; Sai Prakash Reddy Konda, the course TA; and the chairman.</p>
+							<p>We would like to thank the engineering wing lab techs: Paul, Brent, and Rob for their help in acquiring parts as well as their input into potential sensor designs.</p>
+							<p>We would also like to say thank you to Priya Angara, and Felipe Rivera for acting as project co-supervisors. We would like to give additional thanks to Priya Angara for going above and beyond in finding time to proofread, give feedback, and point us towards tools and resources with no delay.</p>
+							<p>Finally, We would like to give a special thanks to Dr. Hausi Müller, who felt confident enough in our idea to act as our project supervisor and take on all of the responsibilities and time commitments that went along with it, no matter where he was in the world.</p>
+						</div>
+					</section>
+
+					<section>
+						<header>
+							<h2>References</h2>
+						</header>
+						<div class="content">
+							<p> [1] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: https://html5up.net/. [Accessed: 21- Jun- 2019].</p>
+							<p> [2] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+						</div>
+					</section>
+
+
 
 				<!-- Section
 					<section>
@@ -413,7 +454,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 				-->
 
-				<!-- Section -->
+				<!-- Section
 					<section>
 						<header>
 							<h2>Get in touch</h2>
@@ -446,7 +487,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<!--<li>
 									<h3>Phone</h3>
 									<a href="#">(000) 000-0000</a>
-								</li>-->
+								</li>
 								<li>
 									<h3>Address</h3>
 									<span>1234 Somewhere Road, Nashville, TN 00000</span>
@@ -461,13 +502,13 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
-								</li>-->
+								</li>
 							</ul>
 						</footer>
-					</section>
+					</section>-->
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Yves Belliveau. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy;BlueTape. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
