needs more content

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 					</section>-->
 
 				<!-- Section -->
-					<section>
+
+					<section id="yeah">
 						<header>
 							<h2>Our Goal</h2>
 						</header>
@@ -119,20 +120,10 @@
 
 					<section>
 						<header>
-							<h2>The Project</h2>
-						</header>
-						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-						</div>
-					</section>
-
-					<section>
-						<header>
 							<h2>How it Works</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>Talk about how it works, introduce video to be put below.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -144,6 +135,16 @@
 						</header>
 						<div class="content">
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						</div>
+					</section>
+
+					<section>
+						<header>
+							<h2>The Project</h2>
+						</header>
+						<div class="content">
+							<p>Talk about the course and the project and the point of the website. Include pretty images below.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -167,6 +168,12 @@
 						<div class="content">
 							<p> [1] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: https://html5up.net/. [Accessed: 21- Jun- 2019].</p>
 							<p> [2] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [3] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [4] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [5] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [6] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [7] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
 						</div>
 					</section>
 
