added a whole shwack of content before the demo. STILL NEED PICS THO

--- a/index.html
+++ b/index.html
@@ -52,62 +52,6 @@
 						</div>
 					</section>-->
 
-				<!-- Section-->
-				<!--	<section id="yeah">
-						<header>
-							<h2>What it do</h2>
-						</header>
-						<div class="content">
-							<p><strong>You KNOW you want it</strong> yeah you do....</p>
-
-								<section>
-									<header>
-										<h3>This</h3>
-										<p>Yup...</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-								<section>
-									<header>
-										<h3>That</h3>
-										<p>Not only that...</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-								<section>
-									<header>
-										<h3>And this too!</h3>
-										<p>Pretty cool stuff, eh?</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-						</div>
-					</section>-->
-
-				<!-- Section -->
-
 					<section id="yeah">
 						<header>
 							<h2>Our Goal</h2>
@@ -120,7 +64,7 @@
 
 					<section>
 						<header>
-							<h2>How it Works</h2>
+							<h2>See it in Action</h2>
 						</header>
 						<div class="content">
 							<p>Talk about how it works, introduce video to be put below.</p>
@@ -128,14 +72,81 @@
 						</div>
 					</section>
 
-				<!-- Section -->
-					<section>
+				<!-- Section-->
+				<section>
 						<header>
-							<h2>About The Team</h2>
+							<h2>The Design</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p><strong>BlueTape</strong> consists of a handheld electronic measuring tape device which connects to a mobile device using Bluetooth, and a companion app on the mobile device which intuitively supplies all of the features to the user.</p>
+
+								<section>
+									<header>
+										<h3>The Case</h3>
+									</header>
+									<div class="content">
+										<p>Designed in TinkerCAD, the case was 3D printed which allows for a perfect fit for the internals at a very low cost [1].</p>
+										<div class="gallery">
+											<a href="images/case/case1.png" class="landscape"><img src="images/case/case1.png" alt="" /></a>
+										</div>
+									</div>
+								</section>
+
+								<section>
+									<header>
+										<h3>The Hardware</h3>
+									</header>
+									<div class="content">
+										<p>Consisting of a Raspberry Pi Zero, a sensor, a battery, a guide wheel, and a measuring tape; the internal hardware were...</p>
+										<div class="gallery">
+											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+											<p>Raspberry Pi Zero</p>
+										</div>
+										<div class="gallery">
+											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<p>Sensor & Guide Wheel</p>
+										</div>
+										<div class="gallery">
+											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+											<p>Measuring Tape</p>
+										</div>
+										<div class="gallery">
+											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<p>LCD</p>
+										</div>
+									</div>
+								</section>
+
+								<section>
+									<header>
+										<h3>The App</h3>
+									</header>
+
+									<div class="content">
+										<p>Created using the Flutter framework, the BlueTape app allows a user to find their perfect size in any brand in the BlueTape database according to their measurements and preferred clothing fit [2].</p>
+										<div class="gallery">
+											<a href="images/app/bluetooth.jpg" class="portrait"><img src="images/app/bluetooth.jpg" alt="" /></a>
+											<a href="images/app/preference.jpg" class="portrait"><img src="images/app/preference.jpg" alt="" /></a>
+										</div>
+										<p>In the future, we plan on improving the app's aesthetics and adding functionality which will further simplify the online shopping experience.</p>
+										<div class="gallery">
+											<a href="images/app/brand.jpg" class="portrait"><img src="images/app/brand.jpg" alt="" /></a>
+											<a href="images/app/size.jpg" class="portrait"><img src="images/app/size.jpg" alt="" /></a>
+										</div>
+									</div>
+								</section>
+
+								<section>
+									<header>
+										<h3>The Database</h3>
+									</header>
+									<div class="content">
+										<p>Currently containing the sizing for 51 brands, the database is implemented using SQLite which facilitates the addition of funtionality such as support for multiple users, more clothing types, and the ability to add user submitted brand data [3].</p>
+									</div>
+								</section>
+
 						</div>
 					</section>
 
@@ -144,14 +155,24 @@
 							<h2>The Project</h2>
 						</header>
 						<div class="content">
-							<p>Talk about the course and the project and the point of the website. Include pretty images below.</p>
+							<p>Talk about the course and the project and the point of the website. Include pretty images below. [4]</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
 					<section>
 						<header>
-							<h2>Acknowledgements</h2>
+							<h2>About The Team</h2>
+						</header>
+						<div class="content">
+							<p>Introduce the team and its members.</p>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						</div>
+					</section>
+
+					<section>
+						<header>
+							<h2>Acknowledgement</h2>
 						</header>
 						<div class="content">
 							<p>The BlueTape design team would like to take this opportunity to say thank you to Dr. T. Ilamparithi, the course coordinator; Dr. Xiaodai Dong, the primary course instructor; Sai Prakash Reddy Konda, the course TA; and the chairman.</p>
@@ -166,14 +187,16 @@
 							<h2>References</h2>
 						</header>
 						<div class="content">
-							<p> [1] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: https://html5up.net/. [Accessed: 21- Jun- 2019].</p>
-							<p> [2] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
-							<p> [3] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
-							<p> [4] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
-							<p> [5] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
-							<p> [6] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
-							<p> [7] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
-							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21- Jun- 2019].</p>
+							<p> [1] 	"TinkerCAD", tinkercad.com, 2019. [Online]. Available: https://www.tinkercad.com/. [Accessed: 1-Aug- 2019].</p>
+							<p> [2] 	"Flutter", flutter.dev, 2019. [Online]. Available: https://flutter.dev/. [Accessed: 1-Aug-2019].</p>
+							<p> [3] 	"SQLite", sqlite.org, 2019. [Online]. Available: https://www.sqlite.org/index.html. [Accessed: 1-Aug-2019].</p>
+							<p> [4] 	"SENG 499: Design Project II", uvic.ca, 2019. [Online]. Available: https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html. [Accessed: 1-Aug-2019].</p>
+							<p> [7] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: https://html5up.net/. [Accessed: 21-Jun-2019].</p>
+							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
+							<!--<p> [6] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
+							<p> [7] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
+							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
+						-->
 						</div>
 					</section>
 
