--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 									<div class="content">
 										<p>Designed in TinkerCAD, the case was 3D printed which allows for a perfect fit for the internals at a very low cost [1].</p>
 										<div class="gallery">
-											<a href="images/case/case1.png" class="landscape"><img src="images/case/case1.png" alt="" /></a>
+											<a href="images/cad/case1.jpg" class="landscape"><img src="images/cad/case1.jpg" alt="" /></a>
+											<a href="images/case/casep1.jpg" class="landscape"><img src="images/case/casep1.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
